# SimpleMovingAverage

./: CMakeLists.txt  main.cpp
